@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-28T16:38:24Z",
-  "count" : 246,
-  "count_minmax" : [ 120, 246 ],
-  "count_decinc" : [ -0, +246 ],
+  "timestamp" : "2022-06-29T02:20:09Z",
+  "count" : 352,
+  "count_minmax" : [ 120, 352 ],
+  "count_decinc" : [ -0, +352 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
