@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-06-28T16:38:24Z",
-  "count_outdated" : 33280,
-  "uniques_outdated" : 645,
-  "count" : 38186,
-  "uniques" : 687,
+  "timestamp" : "2022-06-29T02:20:09Z",
+  "count_outdated" : 33633,
+  "uniques_outdated" : 648,
+  "count" : 38519,
+  "uniques" : 688,
   "clones" : [
     {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 58,
-      "count_minmax": [ 58, 353 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
-    },
-    {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 352,
+      "count": 284,
       "count_minmax": [ 120, 352 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 246,
-      "count_minmax": [ 120, 246 ],
+      "count": 352,
+      "count_minmax": [ 120, 352 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
