@@ -1,15 +1,10 @@
 {
-  "count": 4906,
+  "count": 4886,
   "uniques": 13,
   "clones": [
     {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 58,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 352,
+      "count": 284,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 246,
+      "count": 352,
       "uniques": 2
     }
   ]
